# ncaa_predictions

./: .env.example  .gitignore  Cargo.toml  README.md  app.js  index.html  package.json  styles.css
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: ui_contract.py
